// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🎉
      </span>
      <span>
        thanks-for-debate-richer
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL deHSoy"
    >
      <a
        class="twitter-share-button"
        data-show-count="false"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        style="margin-left:0;margin-top:0"
      >
        Tweet
      </a>
      <div
        data-testid="Tooltip"
        label="copied-link"
      >
        <button
          class="sc-bcXGCL sc-laZSpB bPdwyl eDMIiP cap-button"
          type="button"
        >
          <svg
            class="sc-bcXGCL sc-eJDTud ePSuPD knzWyK cap-icon"
            fill="none"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.944 24.499l-3.65 3.648a3.804 3.804 0 01-5.255 0l-1.19-1.188a3.716 3.716 0 010-5.255l7.734-7.733a3.719 3.719 0 015.256 0l1.19 1.189a1.337 1.337 0 001.891-1.89l-1.19-1.19a6.388 6.388 0 00-9.029 0l-7.733 7.733a6.383 6.383 0 000 9.027l1.19 1.188a6.38 6.38 0 009.027 0l3.648-3.647a1.335 1.335 0 00-1.885-1.886l-.004.004z"
              fill="currentColor"
            />
            <path
              d="M30.035 3.15l-1.19-1.189a6.4 6.4 0 00-9.026 0l-3.874 3.867a1.333 1.333 0 001.886 1.885l3.866-3.866a3.72 3.72 0 015.255 0l1.19 1.19a3.715 3.715 0 010 5.256l-7.733 7.734a3.692 3.692 0 01-2.628 1.089 3.687 3.687 0 01-2.625-1.088 1.334 1.334 0 10-1.887 1.883 6.336 6.336 0 004.512 1.866 6.336 6.336 0 004.514-1.866l7.733-7.734a6.38 6.38 0 000-9.028l.007.002z"
              fill="currentColor"
            />
          </svg>
          global.link
        </button>
      </div>
    </div>
    <div
      class="sc-bcXGCL dwaSaK cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL gwyxKX"
        >
          <button
            class="sc-bcXGCL sc-laZSpB eUXbaw ihBvOL cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB jujdjU hlwnod cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🎉
      </span>
      <span>
        publish.argument.validate.account
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL dwaSaK cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL gwyxKX"
        >
          <button
            class="sc-bcXGCL sc-laZSpB eUXbaw ihBvOL cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB jujdjU hlwnod cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL kRzAGt cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🎉
        </span>
        <span>
          publish.argument.validate.account
        </span>
      </p>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB hgBEdJ hlwnod cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL kRzAGt cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🎉
        </span>
        <span>
          thanks-for-debate-richer
        </span>
      </p>
    </div>
    <div
      class="sc-bcXGCL deHSoy"
    >
      <a
        class="twitter-share-button"
        data-show-count="false"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        style="margin-left:0;margin-top:0"
      >
        Tweet
      </a>
      <div
        data-testid="Tooltip"
        label="copied-link"
      >
        <button
          class="sc-bcXGCL sc-laZSpB bPdwyl eDMIiP cap-button"
          type="button"
        >
          <svg
            class="sc-bcXGCL sc-eJDTud ePSuPD knzWyK cap-icon"
            fill="none"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.944 24.499l-3.65 3.648a3.804 3.804 0 01-5.255 0l-1.19-1.188a3.716 3.716 0 010-5.255l7.734-7.733a3.719 3.719 0 015.256 0l1.19 1.189a1.337 1.337 0 001.891-1.89l-1.19-1.19a6.388 6.388 0 00-9.029 0l-7.733 7.733a6.383 6.383 0 000 9.027l1.19 1.188a6.38 6.38 0 009.027 0l3.648-3.647a1.335 1.335 0 00-1.885-1.886l-.004.004z"
              fill="currentColor"
            />
            <path
              d="M30.035 3.15l-1.19-1.189a6.4 6.4 0 00-9.026 0l-3.874 3.867a1.333 1.333 0 001.886 1.885l3.866-3.866a3.72 3.72 0 015.255 0l1.19 1.19a3.715 3.715 0 010 5.256l-7.733 7.734a3.692 3.692 0 01-2.628 1.089 3.687 3.687 0 01-2.625-1.088 1.334 1.334 0 10-1.887 1.883 6.336 6.336 0 004.512 1.866 6.336 6.336 0 004.514-1.866l7.733-7.734a6.38 6.38 0 000-9.028l.007.002z"
              fill="currentColor"
            />
          </svg>
          global.link
        </button>
      </div>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB hgBEdJ hlwnod cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL dwaSaK cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL gwyxKX"
        >
          <button
            class="sc-bcXGCL sc-laZSpB eUXbaw ihBvOL cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB jujdjU hlwnod cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote {"instance":"CapCollectif"}
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL dwaSaK cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL gwyxKX"
        >
          <button
            class="sc-bcXGCL sc-laZSpB eUXbaw ihBvOL cap-button"
            type="button"
          >
            global.cancel
          </button>
          <div
            arialabel="global.menu"
            data-testid="Modal"
            disclosure="[object Object]"
          />
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL kRzAGt cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🗳️
        </span>
        <span>
          thanks-for-your-vote {"instance":"CapCollectif"}
        </span>
      </p>
    </div>
    <div
      arialabel="global.menu"
      data-testid="Modal"
      disclosure="[object Object]"
    />
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL dlOtCG"
    >
      <button
        class="sc-bcXGCL sc-laZSpB ifLJXS blfAEz cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL kRzAGt cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🗳️
        </span>
        <span>
          thanks-for-your-vote
        </span>
      </p>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB hgBEdJ hlwnod cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;
